"""SQLite database layer for job tracker."""

import json
import os
import sqlite3
from datetime import datetime
from pathlib import Path

# Support test mode: in-memory database when JOBFLOW_TEST_DB=1
if os.environ.get("JOBFLOW_TEST_DB") == "1":
    DB_PATH = Path(":memory:")
    _USE_MEMORY = True
else:
    DB_PATH = Path(__file__).parent.parent / "job_pipeline" / "jobs.db"
    _USE_MEMORY = False

# ---------------------------------------------------------------------------
# Schema
# ---------------------------------------------------------------------------

SCHEMA_VERSION = 6

SCHEMA = """
CREATE TABLE IF NOT EXISTS jobs (
    id TEXT NOT NULL,
    platform TEXT NOT NULL,
    title TEXT NOT NULL,
    company TEXT NOT NULL,
    location TEXT DEFAULT '',
    url TEXT NOT NULL,
    salary TEXT,
    salary_min INTEGER,
    salary_max INTEGER,
    apply_url TEXT,
    description TEXT DEFAULT '',
    posted_date TEXT,
    tags TEXT DEFAULT '[]',
    easy_apply BOOLEAN DEFAULT 0,
    score INTEGER,
    status TEXT DEFAULT 'discovered',
    applied_date TEXT,
    notes TEXT,
    created_at TEXT DEFAULT CURRENT_TIMESTAMP,
    updated_at TEXT DEFAULT CURRENT_TIMESTAMP,
    dedup_key TEXT UNIQUE,
    PRIMARY KEY (dedup_key)
);
"""

# Migrations keyed by target version.
# Version 1: original schema (CREATE TABLE above).
# Version 2: Phase 3 discovery engine columns.
MIGRATIONS: dict[int, list[str]] = {
    1: [],  # Original schema, applied by CREATE TABLE IF NOT EXISTS
    2: [
        "ALTER TABLE jobs ADD COLUMN first_seen_at TEXT",
        "ALTER TABLE jobs ADD COLUMN last_seen_at TEXT",
        "ALTER TABLE jobs ADD COLUMN viewed_at TEXT",
        "ALTER TABLE jobs ADD COLUMN score_breakdown TEXT",
        "ALTER TABLE jobs ADD COLUMN company_aliases TEXT",
        "ALTER TABLE jobs ADD COLUMN salary_display TEXT",
        "ALTER TABLE jobs ADD COLUMN salary_currency TEXT DEFAULT 'USD'",
        # Backfill existing rows
        "UPDATE jobs SET first_seen_at = created_at WHERE first_seen_at IS NULL",
        "UPDATE jobs SET last_seen_at = updated_at WHERE last_seen_at IS NULL",
    ],
    3: [
        """CREATE TABLE IF NOT EXISTS run_history (
            id INTEGER PRIMARY KEY AUTOINCREMENT,
            started_at TEXT NOT NULL,
            finished_at TEXT NOT NULL,
            mode TEXT NOT NULL DEFAULT 'manual',
            platforms_searched TEXT NOT NULL DEFAULT '[]',
            total_raw INTEGER DEFAULT 0,
            total_scored INTEGER DEFAULT 0,
            new_jobs INTEGER DEFAULT 0,
            errors TEXT DEFAULT '[]',
            status TEXT NOT NULL DEFAULT 'success',
            duration_seconds REAL DEFAULT 0.0
        )""",
    ],
    4: [
        # FTS5 virtual table for full-text search on jobs
        """CREATE VIRTUAL TABLE IF NOT EXISTS jobs_fts USING fts5(
            title, company, description,
            content='jobs',
            content_rowid=rowid
        )""",
        # Trigger: keep FTS in sync on INSERT
        """CREATE TRIGGER IF NOT EXISTS jobs_fts_ai AFTER INSERT ON jobs BEGIN
            INSERT INTO jobs_fts(rowid, title, company, description)
            VALUES (new.rowid, new.title, new.company, new.description);
        END""",
        # Trigger: keep FTS in sync on DELETE
        """CREATE TRIGGER IF NOT EXISTS jobs_fts_ad AFTER DELETE ON jobs BEGIN
            INSERT INTO jobs_fts(jobs_fts, rowid, title, company, description)
            VALUES ('delete', old.rowid, old.title, old.company, old.description);
        END""",
        # Trigger: keep FTS in sync on UPDATE
        """CREATE TRIGGER IF NOT EXISTS jobs_fts_au AFTER UPDATE ON jobs BEGIN
            INSERT INTO jobs_fts(jobs_fts, rowid, title, company, description)
            VALUES ('delete', old.rowid, old.title, old.company, old.description);
            INSERT INTO jobs_fts(rowid, title, company, description)
            VALUES (new.rowid, new.title, new.company, new.description);
        END""",
        # Rebuild FTS index for existing data
        "INSERT INTO jobs_fts(jobs_fts) VALUES('rebuild')",
        # Activity log table
        """CREATE TABLE IF NOT EXISTS activity_log (
            id INTEGER PRIMARY KEY AUTOINCREMENT,
            dedup_key TEXT NOT NULL,
            event_type TEXT NOT NULL,
            old_value TEXT,
            new_value TEXT,
            detail TEXT,
            created_at TEXT NOT NULL DEFAULT (datetime('now'))
        )""",
        "CREATE INDEX IF NOT EXISTS idx_activity_dedup ON activity_log(dedup_key)",
        "CREATE INDEX IF NOT EXISTS idx_activity_created ON activity_log(created_at)",
        # Backfill discovered events for existing jobs
        """INSERT INTO activity_log (dedup_key, event_type, new_value, created_at)
        SELECT dedup_key, 'discovered', platform, COALESCE(first_seen_at, created_at)
        FROM jobs""",
    ],
    5: [
        # Migrate old status values to new vocabulary
        "UPDATE jobs SET status = 'saved' WHERE status = 'approved'",
        "UPDATE jobs SET status = 'withdrawn' WHERE status = 'skipped'",
    ],
    6: [
        # Resume/cover letter version tracking
        """CREATE TABLE IF NOT EXISTS resume_versions (
            id INTEGER PRIMARY KEY AUTOINCREMENT,
            job_dedup_key TEXT NOT NULL,
            resume_type TEXT NOT NULL,
            file_path TEXT NOT NULL,
            original_resume_path TEXT NOT NULL,
            model_used TEXT NOT NULL,
            prompt_hash TEXT,
            created_at TEXT NOT NULL DEFAULT (datetime('now')),
            FOREIGN KEY (job_dedup_key) REFERENCES jobs(dedup_key)
        )""",
        "CREATE INDEX IF NOT EXISTS idx_resume_versions_job ON resume_versions(job_dedup_key)",
    ],
}

# ---------------------------------------------------------------------------
# Connection management
# ---------------------------------------------------------------------------

# Singleton connection for in-memory databases (shared across calls)
_memory_conn: sqlite3.Connection | None = None


def get_conn() -> sqlite3.Connection:
    global _memory_conn
    if _USE_MEMORY:
        if _memory_conn is None:
            _memory_conn = sqlite3.connect(":memory:", check_same_thread=False)
            _memory_conn.row_factory = sqlite3.Row
            _memory_conn.execute("PRAGMA journal_mode=WAL")
            _memory_conn.execute("PRAGMA busy_timeout = 5000")
        return _memory_conn
    conn = sqlite3.connect(str(DB_PATH))
    conn.row_factory = sqlite3.Row
    conn.execute("PRAGMA journal_mode=WAL")
    conn.execute("PRAGMA busy_timeout = 5000")
    return conn


# ---------------------------------------------------------------------------
# Migration
# ---------------------------------------------------------------------------


def migrate_db(conn: sqlite3.Connection) -> None:
    """Run pending schema migrations based on PRAGMA user_version."""
    current = conn.execute("PRAGMA user_version").fetchone()[0]

    for version in range(current + 1, SCHEMA_VERSION + 1):
        statements = MIGRATIONS.get(version, [])
        for sql in statements:
            try:
                conn.execute(sql)
            except sqlite3.OperationalError as exc:
                msg = str(exc).lower()
                # Idempotency: ignore "duplicate column name" and "already exists" errors
                if "duplicate column name" in msg or "already exists" in msg:
                    continue
                raise
        conn.commit()

    if current < SCHEMA_VERSION:
        conn.execute(f"PRAGMA user_version = {SCHEMA_VERSION}")
        conn.commit()


# ---------------------------------------------------------------------------
# Initialization
# ---------------------------------------------------------------------------


def init_db() -> None:
    with get_conn() as conn:
        conn.executescript(SCHEMA)
        migrate_db(conn)


# ---------------------------------------------------------------------------
# Upsert
# ---------------------------------------------------------------------------


def upsert_job(job: dict) -> None:
    """Insert or update a job. Uses dedup_key for conflict resolution."""
    company = (
        job.get("company", "")
        .lower()
        .strip()
        .replace(" inc.", "")
        .replace(" inc", "")
        .replace(" llc", "")
        .replace(" ltd", "")
        .replace(",", "")
    )
    title = job.get("title", "").lower().strip()
    dedup_key = f"{company}::{title}"

    tags = job.get("tags", [])
    if isinstance(tags, list):
        tags = json.dumps(tags)

    # JSON-serialize complex fields if needed
    score_breakdown = job.get("score_breakdown")
    if isinstance(score_breakdown, dict):
        score_breakdown = json.dumps(score_breakdown)

    company_aliases = job.get("company_aliases")
    if isinstance(company_aliases, list):
        company_aliases = json.dumps(company_aliases)

    now = datetime.now().isoformat()
    is_new = get_job(dedup_key) is None

    with get_conn() as conn:
        conn.execute(
            """
            INSERT INTO jobs (
                id, platform, title, company, location, url,
                salary, salary_min, salary_max, apply_url,
                description, posted_date, tags, easy_apply,
                score, status, applied_date, notes,
                created_at, updated_at, dedup_key,
                first_seen_at, last_seen_at, viewed_at,
                score_breakdown, company_aliases,
                salary_display, salary_currency
            ) VALUES (
                ?, ?, ?, ?, ?, ?,
                ?, ?, ?, ?,
                ?, ?, ?, ?,
                ?, ?, ?, ?,
                ?, ?, ?,
                ?, ?, ?,
                ?, ?,
                ?, ?
            )
            ON CONFLICT(dedup_key) DO UPDATE SET
                description = CASE
                    WHEN LENGTH(excluded.description) > LENGTH(jobs.description)
                    THEN excluded.description ELSE jobs.description END,
                score = COALESCE(excluded.score, jobs.score),
                salary = COALESCE(excluded.salary, jobs.salary),
                salary_min = COALESCE(excluded.salary_min, jobs.salary_min),
                salary_max = COALESCE(excluded.salary_max, jobs.salary_max),
                updated_at = excluded.updated_at,
                last_seen_at = excluded.last_seen_at,
                score_breakdown = COALESCE(excluded.score_breakdown, jobs.score_breakdown),
                company_aliases = COALESCE(excluded.company_aliases, jobs.company_aliases),
                salary_display = COALESCE(excluded.salary_display, jobs.salary_display),
                salary_currency = COALESCE(excluded.salary_currency, jobs.salary_currency)
            """,
            (
                job.get("id", ""),
                job.get("platform", ""),
                job.get("title", ""),
                job.get("company", ""),
                job.get("location", ""),
                job.get("url", ""),
                job.get("salary"),
                job.get("salary_min"),
                job.get("salary_max"),
                job.get("apply_url"),
                job.get("description", ""),
                job.get("posted_date"),
                tags,
                job.get("easy_apply", False),
                job.get("score"),
                job.get("status", "discovered"),
                job.get("applied_date"),
                job.get("notes"),
                now,
                now,
                dedup_key,
                now,  # first_seen_at
                now,  # last_seen_at
                job.get("viewed_at"),
                score_breakdown,
                company_aliases,
                job.get("salary_display"),
                job.get("salary_currency", "USD"),
            ),
        )

    if is_new:
        log_activity(dedup_key, "discovered", new_value=job.get("platform", ""))


def upsert_jobs(jobs: list[dict]) -> int:
    """Bulk upsert. Returns count of jobs processed."""
    for job in jobs:
        upsert_job(job)
    return len(jobs)


# ---------------------------------------------------------------------------
# Delta tracking
# ---------------------------------------------------------------------------


def mark_viewed(dedup_key: str) -> None:
    """Set viewed_at timestamp for a job that hasn't been viewed yet."""
    now = datetime.now().isoformat()
    with get_conn() as conn:
        conn.execute(
            "UPDATE jobs SET viewed_at = ? WHERE dedup_key = ? AND viewed_at IS NULL",
            (now, dedup_key),
        )


def remove_stale_jobs(searched_platforms: list[str], run_timestamp: str) -> int:
    """Remove jobs from searched platforms that were not seen in this run.

    CRITICAL: Only deletes from platforms that were actually searched this run,
    not all platforms. This prevents deleting jobs from platforms that were
    skipped (e.g., due to login failure).

    Returns the count of deleted rows.
    """
    if not searched_platforms:
        return 0

    placeholders = ",".join("?" for _ in searched_platforms)
    with get_conn() as conn:
        cursor = conn.execute(
            f"""
            DELETE FROM jobs
            WHERE platform IN ({placeholders})
              AND (last_seen_at IS NULL OR last_seen_at < ?)
            """,
            (*searched_platforms, run_timestamp),
        )
        return cursor.rowcount


def backfill_score_breakdowns(scorer_fn) -> int:
    """Re-score jobs that have a score but no breakdown.

    Args:
        scorer_fn: Callable that takes a dict of job fields and returns
                   a (score, breakdown_dict) tuple.

    Returns the count of backfilled rows.
    """
    count = 0
    with get_conn() as conn:
        rows = conn.execute(
            "SELECT * FROM jobs WHERE score IS NOT NULL AND score_breakdown IS NULL"
        ).fetchall()

        for row in rows:
            job_dict = dict(row)
            try:
                score, breakdown = scorer_fn(job_dict)
                conn.execute(
                    "UPDATE jobs SET score = ?, score_breakdown = ? WHERE dedup_key = ?",
                    (
                        score,
                        json.dumps(breakdown) if isinstance(breakdown, dict) else breakdown,
                        job_dict["dedup_key"],
                    ),
                )
                count += 1
            except Exception:
                continue  # Skip jobs that can't be scored

        conn.commit()
    return count


# ---------------------------------------------------------------------------
# Query functions
# ---------------------------------------------------------------------------


def get_jobs(
    search: str | None = None,
    score_min: int | None = None,
    platform: str | None = None,
    status: str | None = None,
    sort_by: str = "score",
    sort_dir: str = "desc",
) -> list[dict]:
    """Query jobs with optional filters and FTS5 search."""
    join = ""
    where_clauses: list[str] = []
    params: list = []

    if search is not None and search.strip():
        join = "JOIN jobs_fts ON jobs_fts.rowid = jobs.rowid"
        where_clauses.append("jobs_fts MATCH ?")
        term = search.strip()
        # If user isn't using FTS5 operators, add prefix matching
        fts_operators = ('"', "*", "AND", "OR", "NOT")
        if not any(op in term for op in fts_operators):
            term = " ".join(word + "*" for word in term.split())
        params.append(term)

    if score_min is not None:
        where_clauses.append("jobs.score >= ?")
        params.append(score_min)
    if platform:
        where_clauses.append("jobs.platform = ?")
        params.append(platform)
    if status:
        where_clauses.append("jobs.status = ?")
        params.append(status)

    where = ""
    if where_clauses:
        where = "WHERE " + " AND ".join(where_clauses)

    allowed_sorts = {"score", "company", "title", "created_at", "salary_min"}
    if sort_by not in allowed_sorts:
        sort_by = "score"
    direction = "DESC" if sort_dir == "desc" else "ASC"

    query = f"SELECT jobs.* FROM jobs {join} {where} ORDER BY {sort_by} {direction} NULLS LAST"

    with get_conn() as conn:
        rows = conn.execute(query, params).fetchall()
    return [dict(row) for row in rows]


def get_job(dedup_key: str) -> dict | None:
    with get_conn() as conn:
        row = conn.execute("SELECT * FROM jobs WHERE dedup_key = ?", (dedup_key,)).fetchone()
    return dict(row) if row else None


def update_job_status(dedup_key: str, status: str) -> None:
    now = datetime.now().isoformat()
    # Fetch old status for activity logging
    old_job = get_job(dedup_key)
    old_status = old_job["status"] if old_job else None

    applied_date = now if status == "applied" else None
    with get_conn() as conn:
        if applied_date:
            conn.execute(
                "UPDATE jobs SET status = ?, applied_date = ?, updated_at = ? WHERE dedup_key = ?",
                (status, applied_date, now, dedup_key),
            )
        else:
            conn.execute(
                "UPDATE jobs SET status = ?, updated_at = ? WHERE dedup_key = ?",
                (status, now, dedup_key),
            )

    log_activity(dedup_key, "status_change", old_value=old_status, new_value=status)


def update_job_notes(dedup_key: str, notes: str) -> None:
    now = datetime.now().isoformat()
    with get_conn() as conn:
        conn.execute(
            "UPDATE jobs SET notes = ?, updated_at = ? WHERE dedup_key = ?",
            (notes, now, dedup_key),
        )
    log_activity(dedup_key, "note_added", detail=notes)


# ---------------------------------------------------------------------------
# Activity log
# ---------------------------------------------------------------------------


def log_activity(
    dedup_key: str,
    event_type: str,
    old_value: str | None = None,
    new_value: str | None = None,
    detail: str | None = None,
) -> None:
    """Record an activity event for a job."""
    with get_conn() as conn:
        conn.execute(
            """INSERT INTO activity_log (dedup_key, event_type, old_value, new_value, detail)
               VALUES (?, ?, ?, ?, ?)""",
            (dedup_key, event_type, old_value, new_value, detail),
        )


def get_activity_log(dedup_key: str) -> list[dict]:
    """Return activity log entries for a job, newest first."""
    with get_conn() as conn:
        rows = conn.execute(
            "SELECT * FROM activity_log WHERE dedup_key = ? ORDER BY created_at DESC, id DESC",
            (dedup_key,),
        ).fetchall()
    return [dict(row) for row in rows]


def get_stats() -> dict:
    with get_conn() as conn:
        total = conn.execute("SELECT COUNT(*) FROM jobs").fetchone()[0]
        by_score = {}
        for row in conn.execute(
            "SELECT score, COUNT(*) as cnt FROM jobs GROUP BY score ORDER BY score DESC"
        ):
            by_score[row["score"]] = row["cnt"]
        by_status = {}
        for row in conn.execute("SELECT status, COUNT(*) as cnt FROM jobs GROUP BY status"):
            by_status[row["status"]] = row["cnt"]
        by_platform = {}
        for row in conn.execute("SELECT platform, COUNT(*) as cnt FROM jobs GROUP BY platform"):
            by_platform[row["platform"]] = row["cnt"]
    return {
        "total": total,
        "by_score": by_score,
        "by_status": by_status,
        "by_platform": by_platform,
    }


def get_enhanced_stats() -> dict:
    """Return analytics data for the analytics dashboard.

    Returns dict with keys: total, jobs_per_day, by_platform, response_rate,
    time_in_stage, status_funnel.
    """
    with get_conn() as conn:
        # -- Total --
        total = conn.execute("SELECT COUNT(*) FROM jobs").fetchone()[0]

        # -- Jobs per day (last 30 days) --
        jobs_per_day_rows = conn.execute(
            """SELECT strftime('%Y-%m-%d', created_at) AS date,
                      COUNT(*) AS count
               FROM jobs
               WHERE created_at >= date('now', '-30 days')
               GROUP BY date
               ORDER BY date"""
        ).fetchall()
        jobs_per_day = [{"date": row["date"], "count": row["count"]} for row in jobs_per_day_rows]

        # -- By platform --
        by_platform_rows = conn.execute(
            """SELECT platform AS name,
                      COUNT(*) AS total,
                      SUM(CASE WHEN score >= 4 THEN 1 ELSE 0 END) AS high_quality,
                      ROUND(AVG(score), 1) AS avg_score,
                      SUM(CASE WHEN status IN (
                          'applied','phone_screen','technical',
                          'final_interview','offer'
                      ) THEN 1 ELSE 0 END) AS actioned
               FROM jobs
               GROUP BY platform"""
        ).fetchall()
        by_platform = [
            {
                "name": row["name"],
                "total": row["total"],
                "high_quality": row["high_quality"] or 0,
                "avg_score": row["avg_score"] or 0.0,
                "actioned": row["actioned"] or 0,
            }
            for row in by_platform_rows
        ]

        # -- Response rate --
        total_applied = conn.execute(
            """SELECT COUNT(*) FROM jobs
               WHERE status NOT IN ('discovered','scored','saved')"""
        ).fetchone()[0]
        responded = conn.execute(
            """SELECT COUNT(*) FROM jobs
               WHERE status IN ('phone_screen','technical','final_interview','offer')"""
        ).fetchone()[0]
        rate_pct = round((responded / total_applied) * 100, 1) if total_applied > 0 else 0.0
        response_rate = {
            "total_applied": total_applied,
            "responded": responded,
            "rate_pct": rate_pct,
        }

        # -- Time in stage (using LAG window function over activity_log) --
        time_in_stage_rows = conn.execute(
            """WITH transitions AS (
                SELECT dedup_key,
                       new_value AS stage,
                       created_at,
                       LAG(created_at) OVER (
                           PARTITION BY dedup_key ORDER BY created_at
                       ) AS prev_at
                FROM activity_log
                WHERE event_type = 'status_change'
            )
            SELECT stage,
                   ROUND(AVG(julianday(created_at) - julianday(prev_at)), 1) AS avg_days,
                   COUNT(*) AS transitions
            FROM transitions
            WHERE prev_at IS NOT NULL
              AND julianday(created_at) - julianday(prev_at) > 0
            GROUP BY stage"""
        ).fetchall()
        time_in_stage = [
            {
                "stage": row["stage"],
                "avg_days": row["avg_days"] or 0.0,
                "transitions": row["transitions"],
            }
            for row in time_in_stage_rows
        ]

        # -- Status funnel (ordered by pipeline progression) --
        status_order = {
            "discovered": 1,
            "scored": 2,
            "saved": 3,
            "applied": 4,
            "phone_screen": 5,
            "technical": 6,
            "final_interview": 7,
            "offer": 8,
            "rejected": 9,
            "withdrawn": 10,
            "ghosted": 11,
        }
        funnel_rows = conn.execute(
            "SELECT status, COUNT(*) AS count FROM jobs GROUP BY status"
        ).fetchall()
        funnel_data = [
            {
                "status": row["status"],
                "count": row["count"],
                "pct": round((row["count"] / total) * 100, 1) if total > 0 else 0.0,
            }
            for row in funnel_rows
        ]
        # Sort by pipeline progression
        funnel_data.sort(key=lambda x: status_order.get(x["status"], 99))

    return {
        "total": total,
        "jobs_per_day": jobs_per_day,
        "by_platform": by_platform,
        "response_rate": response_rate,
        "time_in_stage": time_in_stage,
        "status_funnel": funnel_data,
    }


# ---------------------------------------------------------------------------
# Run history
# ---------------------------------------------------------------------------


def record_run(
    started_at: str,
    finished_at: str,
    mode: str,
    platforms_searched: list[str],
    total_raw: int,
    total_scored: int,
    new_jobs: int,
    errors: list[str],
    status: str,
    duration_seconds: float,
) -> None:
    """Record a pipeline run in the run_history table."""
    with get_conn() as conn:
        conn.execute(
            """INSERT INTO run_history
               (started_at, finished_at, mode, platforms_searched,
                total_raw, total_scored, new_jobs, errors, status, duration_seconds)
               VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?)""",
            (
                started_at,
                finished_at,
                mode,
                json.dumps(platforms_searched),
                total_raw,
                total_scored,
                new_jobs,
                json.dumps(errors),
                status,
                duration_seconds,
            ),
        )


def get_run_history(limit: int = 50) -> list[dict]:
    """Return recent pipeline runs, newest first."""
    with get_conn() as conn:
        rows = conn.execute(
            "SELECT * FROM run_history ORDER BY id DESC LIMIT ?",
            (limit,),
        ).fetchall()
    return [dict(row) for row in rows]


# Initialize on import
init_db()
